--- a/package.json
+++ b/package.json
@@ -36,54 +36,63 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": ["prettier --write"]
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
+    ]
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@ant-design/pro-components": "^2.3.57",
+    "@ant-design/icons": "^5.3.7",
+    "@ant-design/pro-components": "^2.7.11",
     "@ant-design/use-emotion-css": "1.0.4",
-    "@umijs/route-utils": "^2.2.2",
-    "antd": "^5.2.2",
-    "classnames": "^2.3.2",
+    "@umijs/route-utils": "^4.0.1",
+    "antd": "^5.18.3",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
-    "moment": "^2.29.4",
     "omit.js": "^2.0.2",
-    "rc-menu": "^9.8.2",
-    "rc-util": "^5.27.2",
-    "react": "^18.2.0",
-    "react-dev-inspector": "^1.8.4",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0"
+    "rc-menu": "^9.14.1",
+    "rc-util": "^5.43.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
-    "@ant-design/pro-cli": "^2.1.5",
+    "@ant-design/pro-cli": "^3.3.0",
     "@testing-library/react": "^13.4.0",
     "@types/classnames": "^2.3.1",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/history": "^4.7.11",
-    "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.14.191",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-helmet": "^6.1.6",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@umijs/fabric": "^2.14.1",
-    "@umijs/lint": "^4.0.52",
-    "@umijs/max": "^4.0.52",
+    "@umijs/lint": "^4.2.13",
+    "@umijs/max": "^4.2.13",
     "cross-env": "^7.0.3",
-    "eslint": "^8.34.0",
-    "express": "^4.18.2",
+    "eslint": "^8.57.0",
+    "express": "^4.19.2",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^10.5.4",
     "mockjs": "^1.1.0",
-    "prettier": "^2.8.4",
-    "swagger-ui-dist": "^4.15.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "umi-presets-pro": "^2.0.2"
+    "prettier": "^2.8.8",
+    "react-dev-inspector": "^1.9.0",
+    "swagger-ui-dist": "^4.19.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2",
+    "umi-presets-pro": "^2.0.3",
+    "umi-serve": "^1.9.11"
   },
-  "engines": { "node": ">=12.0.0" }
+  "engines": {
+    "node": ">=12.0.0"
+  }
 }
