--- a/package.json
+++ b/package.json
@@ -55,11 +55,14 @@
     "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
     "omit.js": "^2.0.2",
+    "pinyin-match": "^1.2.5",
     "rc-menu": "^9.14.1",
     "rc-util": "^5.43.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5"
+    "react-helmet-async": "^2.0.5",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
